shell/sass/gnome-shell/_common.scss
//
// This is the RIGHT PLACE to edit the stylesheet
//

// let's start by telling people not to edit the generated CSS:
$cakeisalie: "This stylesheet is generated, DO NOT EDIT";
/* #{$cakeisalie} */


/***********
 * Globals *
 ***********/

* {
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 0.2s;
}

$panel-corner-radius: 0;

$font-family: Noto Sans, Cantarell, Sans-Serif;

stage {
  font-family: $font-family;
  font-weight: 400;
  @include fontscaling($ref_size);
  color: $fg_color;
}


/***********
 * Widgets *
 ***********/


/***********
 * Buttons *
 ***********/

.button {
  padding: if($eta == 'false', 7px 16px 8px, 5px 12px 6px);
  border-radius: 2px;
  border-width: 0;
  font-weight: 500;
  @include button(flat-normal);
  &:hover { @include button(flat-hover); }
  &:active { @include button(flat-active); }
  &:insensitive { @include button(flat-insensitive); }
  &:focus { @include button(flat-focus); }
}

.modal-dialog-linked-button {
  padding: if($eta == 'false', 9px 16px 10px, 6px 12px 7px);
  border: none;
  color: $inverted_secondary_accent_label_color;
  background-color: transparent;
  box-shadow: 0 0 0 2px transparent;
  text-shadow: none;
  icon-shadow: none;
  font-weight: 700;
  &:hover {
    color: $inverted_accent_label_color;
    background-color: $accent_fill_color;
  }
  &:focus {
    color: $inverted_accent_label_color;
    background-color: rgba(0, 0, 0, 0.01);
    box-shadow: inset 0 0 0 2px $accent_fill_color;
    &:hover { background-color: $accent_fill_color; }
  }
  &:active {
    color: $inverted_accent_label_color;
    background-color: $accent_active_fill_color;
    box-shadow: none;
  }
  &:insensitive { @include button(flat-insensitive); }

  &:first-child { border-radius: 0 0 0 2px; }
  &:last-child {
    border-right-width: 0;
    border-radius: 0 0 2px 0;
  }
  &:first-child:last-child {
    border-right-width: 0;
    border-radius: 0 0 2px 2px;
  }
}


/***********
 * Entries *
 ***********/

StEntry {
  @include entry(normal);
  padding: if($eta == 'false', 7px 8px 8px, 5px 6px 6px);
  border-radius: 0;
  border-width: 0;
  color: if($nokto == 'false', $inverted_fg_color, $fg_color);
  selection-background-color: $selected_bg_color;
  selected-color: $selected_fg_color;
  &:hover { @include entry(hover); }
  &:focus { @include entry(focus); }
  &:insensitive { @include entry(insensitive); }

  StIcon.capslock-warning {
    icon-size: 16px;
    warning-color: $warning_color;
    padding: 0 2px;
  }
}


/**************
 * Scrollbars *
 **************/

StScrollView {
  &.vfade { -st-vfade-offset: 32px; }
  &.hfade { -st-hfade-offset: 32px; }
}

StScrollBar {
  padding: 0;

  StScrollView & {
    min-width: if($eta == 'false', 6px, 4px);
    min-height: if($eta == 'false', 6px, 4px);
  }

  StBin#trough {
    margin: 0;
    border-radius: 0;
    background-color: $fill_color;
  }

  StButton#vhandle,
  StButton#hhandle {
    margin: 0;
    border-radius: 0;
    background-color: if($nokto == 'false',
                      scale-color($inverted_fg_color, $alpha: -40%),
                      scale-color($fg_color, $alpha: -40%));
    &:hover {
      background-color: if($nokto == 'false',
                        scale-color($inverted_fg_color, $alpha: -20%),
                        scale-color($fg_color, $alpha: -20%));
    }
    &:active {
      background-color: if($nokto == 'false',
                        scale-color($inverted_fg_color, $alpha: -0%),
                        scale-color($fg_color, $alpha: -0%));
    }
  }
}


/**********
 * Slider *
 **********/

.slider {
  height: 16px;
  color: $accent_color;
  -slider-height: 2px;
  -slider-background-color: if($nokto == 'false',
                            scale-color($fg_color, $alpha: -90%),
                            $fill_color); // background of the trough
  -slider-border-color: transparent; // trough border color
  -slider-active-background-color: $accent_color; // active trough fill
  -slider-active-border-color: transparent; // active trough border
  -slider-border-width: 0;
  -slider-handle-radius: 8px;
}


/***************
 * Check Boxes *
 ***************/

.check-box {
  StBoxLayout { spacing: 0.8em; }
  StBin {
    width: 20px;
    height: 20px;
    background-image: url("assets/checkbox-off.svg");
    color: if($nokto == 'false', $inverted_secondary_fg_color,
                                 $secondary_fg_color);
  }
  &:focus StBin { background-image: url("assets/checkbox-off-hover.svg"); }
  &:checked StBin { background-image: url("assets/checkbox.svg"); }
  &:focus:checked StBin { background-image: url("assets/checkbox-hover.svg"); }
}


/************
 * Switches *
 ************/

.toggle-switch {
  width: 40px;
  height: 20px;
  background-size: contain;
}

@each $v in us, intl {
  .toggle-switch-#{$v} {
    background-image: url("toggle-off.svg");
    &:checked { background-image: url("toggle-on.svg"); }
  }
  .toggle-switch-#{$v}:hover,
  .toggle-switch-#{$v}:active,
  .toggle-switch-#{$v}:focus {
    background-image: url("toggle-off-hover.svg");
    &:checked { background-image: url("toggle-on-hover.svg"); }
  }
}


/*********
 * Links *
 *********/

.shell-link {
  border-radius: 2px;
  color: $link_color;
  &:hover {
    color: $link_color;
    background-color: transparentize($link_color, 0.9);
  }
  &:active {
    color: $link_color;
    background-color: transparentize($link_color, 0.8);
  }
}


/*****************
 * Modal Dialogs *
 *****************/

.headline {
  @include fontscaling($ref_size * 1.1);
}

.lightbox { background-color: #000000; }
.flashspot { background-color: #FFFFFF; }
/* ... */

